# calibrate-meadowlark-SLM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yaml
docs/: HDMIDiffractiveTest.cpp
output_files/: GlobalNormalizedMeasurements.csv  NormLutMeasurements.csv  NormalizedMeasurements.csv  PhaseFitMeasurements.csv  PhaseMeasurements.csv  Raw0.csv  slm532_at633.lut
src/: __init__.py  calibrate.py
src/Thorlabs/: PM100D.h  PM100D_64.lib  PM100D_rsrc.h  PM100D_util.h  PM103 100 ks per second.py  PM103 Peak Search Sample.py  PM103 Scope Sample HW Trigger.py  PM103 Scope Sample SW Trigger.py  Power Meter Write Read Raw.py  PowermeterSample.py  TLPM.h  TLPM.py  TLPMX.h  TLPMX_64.lib  TLPM_64.lib
src/ext/: Blink_C_wrapper.h  Blink_C_wrapper.lib  ImageGen.h  ImageGen.lib  stdafx.h
src/meadowlark_tools/: MeadowlarkInterface.py  __init__.py
src/template_python/: __init__.py  hello.py
src/tlpm_interface/: __init__.py  measpower.py  pwrmeter_openclose.py  seekopen.py
tests/: test_hello.py
