[tool.poetry]
name = "meadowlark_calibration"
version = "0.1.0"
description = ""
authors = ["Kaia Williams <kaia.j.williams@gmail.com>", "Rudyard Richter <richter3141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
